querries to contacts

--- a/CWC-ChatApp-Info.plist
+++ b/CWC-ChatApp-Info.plist
@@ -19,5 +19,7 @@
 		<string>LexendDeca-SemiBold.ttf</string>
 		<string>LexendDeca-Bold.ttf</string>
 	</array>
+	<key>NSContactsUsageDescription</key>
+	<string>Sync your contacts to chat with them</string>
 </dict>
 </plist>
